tests/Project2/test/undefined.spl
struct x { int z;struct c a; };
struct hahaha test() {}
int main() {
    struct x a;
    struct y c;
    x = 10;
    foo(a);
    z[w] = w[x];
    a.c = 0;
    return 0;
}
